Fix chat alignment

--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -259,6 +259,7 @@ input[type="file"] {
 }
 
 .chat-line{
+	width: fit-content;
 	border-radius: 0.5rem;
 	background-color: rgba(0,0,0,0.2);
 }
